Fix: add correct path to sign out

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -84,7 +84,7 @@
         <!-- <h2 class="page-title">Thread</h2> -->
         <div class="page-options" id="sign-out-btn-profile"> 
             <div class="sign-out-item">
-                <a href="/signin" class="sign-out-item-link">
+                <a href="/api/auth/logout" class="sign-out-item-link">
                     <svg viewBox="0 0 24 24" width="25" height="25" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                         <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
